[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guard-rails-py"
version = "0.1.0"
description = "Composable output guardrails for LLM agent responses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "guardrails", "validation", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-guard-rails-py"
Repository = "https://github.com/MukundaKatta/agent-guard-rails-py"
Issues = "https://github.com/MukundaKatta/agent-guard-rails-py/issues"

# The test suite uses only the standard-library ``unittest`` module, so there
# are no runtime or test dependencies to install. Run the tests with:
#   python -m unittest discover -s tests

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_guard_rails = ["py.typed"]
